@@ -4165,7 +4165,10 @@ target_disable_btrace (struct btrace_target_info *btinfo)
 
   for (t = current_target.beneath; t != NULL; t = t->beneath)
     if (t->to_disable_btrace != NULL)
-      return t->to_disable_btrace (btinfo);
+      {
+	t->to_disable_btrace (btinfo);
+	return;
+      }
 
   tcomplain ();
 }
@@ -4179,7 +4182,10 @@ target_teardown_btrace (struct btrace_target_info *btinfo)
 
   for (t = current_target.beneath; t != NULL; t = t->beneath)
     if (t->to_teardown_btrace != NULL)
-      return t->to_teardown_btrace (btinfo);
+      {
+	t->to_teardown_btrace (btinfo);
+	return;
+      }
 
   tcomplain ();
 }
